Docs: Navigation Styles. Section Heading <code> Styles. Fixes to Sections spacing.

--- a/docs/less/document.less
+++ b/docs/less/document.less
@@ -20,10 +20,11 @@ body {
 	width: 270px;
 	color: @white;
 	background: @dark;
+	.gradient(@primary, 0%, @secondary, 100%);
 }
 
 #content {
-	padding: 35px;
+	padding: 0px 30px;
 	width: ~"calc(100% - 270px)";
 	background: @white;
 }
@@ -48,7 +49,8 @@ pre {
 
 //Navigation
 .navigation {
-	padding: 35px 0px;
+	padding: 30px 0px;
+	
 	ul {
 		list-style: none;
 		
@@ -56,12 +58,32 @@ pre {
 			
 			a {
 				display: block;
+				margin-left: 0;
 				padding: 5px 20px;
+				.font-size(1.4);
+				font-weight: 600;
 				color: @light;
+				text-transform: uppercase;
+				text-shadow: 0px 1px 2px rgba(0,0,0,0.2);
+				.transition(all @transition-fast ease-in-out);
 				
 				&:hover,
 				&:focus {
-					color: @primary;
+					color: @white;
+					margin-left: 2px;
+				}
+			}
+			
+			ul {
+				margin-left: 20px;
+				border-left: 1px solid darken(@primary, 5%);
+				
+				li {
+					a {
+						padding: 3px 12px;
+						.font-size(1.2);
+						text-transform: none;
+					}
 				}
 			}
 		}
@@ -70,9 +92,12 @@ pre {
 
 //Section
 .section {
-	margin: 0 auto;
-	padding: 30px;
-	max-width: 960px;
+	margin: 80px auto;
+	max-width: 900px;
+	
+	&:first-child {
+		margin-top: 40px;
+	}
 	
 	.section-title {
 		margin-bottom: 35px;
@@ -81,8 +106,10 @@ pre {
 		border-bottom: 1px solid @light;
 		
 		code {
+			margin-left: 15px;
+			padding: 0;
 			font-size: 12px;
-			font-weight: 600;
+			//font-weight: 500;
 			color: @primary;
 			background: none !important;
 			border: none;
